# magellan

./: pom.xml
agent/: Dockerfile  Main.hs  install.sh  magellan-agent.cabal
core/: pom.xml
docker/: pom.xml
docker/src/main/java/name/dflemstr/magellan/docker/: DockerUnitDefinition.java  DockerUnitDefinitionImpl.java  DockerUnits.java  Endpoint.java
docker/src/test/java/name/dflemstr/magellan/docker/: DockerUnitsTest.java  Example.java
fleet/: pom.xml
fleet/src/main/java/name/dflemstr/magellan/fleet/: CmdBuilder.java  CmdFleet.java  CmdUnit.java  Fleet.java  Unit.java  UnitDefinition.java  UnitDefinitionImpl.java
fleet/src/main/java/name/dflemstr/magellan/fleet/model/: Option.java  State.java  UnitInfo.java
fleet/src/test/java/name/dflemstr/magellan/fleet/: Example.java  UnitDefinitionImplTest.java
