name:                magellan-agent
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             Apache-2.0
license-file:        LICENSE
author:              David Flemström
maintainer:          david.flemstrom@gmail.com
copyright:           © David Flemström 2014
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10

executable magellan-agent
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       process >=1.2 && <1.3
  default-language:    Haskell2010
